[gd_scene load_steps=8 format=3 uid="uid://8waqhfans6l3"]

[ext_resource type="Texture2D" uid="uid://dyy7v3vo1gxe2" path="res://assets/textures/PlayerLabelBoxExt.png" id="1_dn60y"]
[ext_resource type="Script" path="res://scripts/player_select_main_menu.gd" id="1_xe2x1"]
[ext_resource type="Texture2D" uid="uid://bsf8i5d7t3kkc" path="res://assets/textures/PlayerLabelBoxInt.png" id="2_ekuw7"]
[ext_resource type="Texture2D" uid="uid://oinnf2rp10mg" path="res://assets/CharacterSheets/Pixelcharactersheet.png" id="2_i8q1b"]
[ext_resource type="Texture2D" uid="uid://b6e56748bbwrq" path="res://assets/textures/Select.PNG" id="3_h053d"]
[ext_resource type="Texture2D" uid="uid://b6m3ukqjk7ixq" path="res://assets/textures/SelectPressed.png" id="4_aspa8"]
[ext_resource type="Texture2D" uid="uid://vae2kf2l1ady" path="res://assets/textures/SelectHighlighted.png" id="5_lv0ao"]

[node name="PlayerSelect" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 125.0
offset_top = 445.0
offset_right = 250.0
offset_bottom = 607.0
scale = Vector2(0.8, 0.8)
script = ExtResource("1_xe2x1")

[node name="PlayerFrameInt" type="TextureRect" parent="."]
modulate = Color(0.176419, 0.176419, 0.176419, 1)
layout_mode = 0
offset_left = 63.0
offset_top = -83.0
offset_right = 184.0
offset_bottom = 118.0
texture = ExtResource("2_ekuw7")
expand_mode = 1

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(126.25, 32.5)
scale = Vector2(2.3, 2.3)
texture = ExtResource("2_i8q1b")
hframes = 9
vframes = 9
region_rect = Rect2(0, 0, 50, 50)

[node name="PlayerFrameExt" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 63.0
offset_top = -83.0
offset_right = 184.0
offset_bottom = 118.0
texture = ExtResource("1_dn60y")
expand_mode = 1

[node name="PlayerNumLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 59.0
offset_top = -75.0
offset_right = 117.0
offset_bottom = -49.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 0
text = "P1"
horizontal_alignment = 1

[node name="RightArrow" type="TextureButton" parent="."]
z_index = 1
layout_mode = 0
offset_left = 138.75
offset_top = 72.5
offset_right = 173.75
offset_bottom = 107.5
texture_normal = ExtResource("3_h053d")
texture_pressed = ExtResource("4_aspa8")
texture_hover = ExtResource("5_lv0ao")
ignore_texture_size = true
stretch_mode = 0

[node name="LeftArrow" type="TextureButton" parent="."]
z_index = 1
layout_mode = 0
offset_left = 72.5
offset_top = 72.5
offset_right = 107.5
offset_bottom = 107.5
texture_normal = ExtResource("3_h053d")
texture_pressed = ExtResource("4_aspa8")
texture_hover = ExtResource("5_lv0ao")
ignore_texture_size = true
stretch_mode = 0
flip_h = true

[connection signal="pressed" from="RightArrow" to="." method="_on_right_arrow_pressed"]
[connection signal="pressed" from="LeftArrow" to="." method="_on_left_arrow_pressed"]
